--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--    특정 뷰에 맞춘 중앙정렬 topToTopOf / bottomToBottomOf 두가지 동시에 -->
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_thunder"
+        app:layout_constraintStart_toEndOf="@id/tv_location_title"
+        app:layout_constraintTop_toTopOf="@id/tv_location_title"
+        app:layout_constraintBottom_toBottomOf="@id/tv_location_title"
+        android:layout_marginStart="9dp"
+        />
+
+    <!--    width/height : 0dp means : constraint to guide line-->
+
+    <ImageView
+        android:id="@+id/img_bg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/guideline2"
+        app:layout_constraintEnd_toEndOf="@id/guideline3"
+        android:src="@drawable/bg_good"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.4"
+        />
+
+    <!--    h,1:1 means 너비를 제약에 맞춘 후 높이를 너비에 1대1비율에 맞춰서 설정함(여기서는 이미지가 가로에 맞춰 정사각형이됨)-->
+
+
+<!--텍스트 관련-->
+
     <TextView
         android:id="@+id/tv_location_title"
         android:layout_width="wrap_content"
@@ -32,33 +63,74 @@
         app:layout_constraintStart_toStartOf="@id/guideline1"
         />
 
-<!--    특정 뷰에 맞춘 중앙정렬 topToTopOf / bottomToBottomOf 두가지 동시에 -->
-    <ImageView
-        android:layout_width="10dp"
+
+    <TextView
+        android:id="@+id/tv_count"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_thunder"
-        app:layout_constraintStart_toEndOf="@id/tv_location_title"
-        app:layout_constraintTop_toTopOf="@id/tv_location_title"
-        app:layout_constraintBottom_toBottomOf="@id/tv_location_title"
-        android:layout_marginStart="9dp"
+        android:letterSpacing="0.05"
+        android:text="61"
+        android:textColor="@color/text_gray"
+        android:textSize="32dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/img_bg"
+        app:layout_constraintEnd_toEndOf="@id/img_bg"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@id/img_bg"
+        app:layout_constraintTop_toTopOf="@id/img_bg"
+        app:layout_constraintVertical_bias="0.502" />
+
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:letterSpacing="-0.05"
+        android:text="보통"
+        android:textColor="@color/text_light_gray"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_count"
+        app:layout_constraintEnd_toEndOf="@id/img_bg"
+        app:layout_constraintStart_toStartOf="@id/img_bg" />
+
+    <TextView
+        android:id="@+id/tv_check_time_title"
+        android:text="@string/measured_at"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:letterSpacing="-0.05"
+        android:textColor="@color/text_light_gray"
+        app:layout_constraintTop_toBottomOf="@+id/img_bg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="40dp"
         />
 
-<!--    width/height : 0dp means : constraint to guide line-->
+    <TextView
+        android:id="@+id/tv_check_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2021-08-29 13:00"
+        android:textColor="@color/text_light_gray"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_check_time_title"
+        />
+
+<!--    refresh 버튼-->
 
     <ImageView
-        android:id="@+id/img_bg"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/guideline2"
-        app:layout_constraintEnd_toEndOf="@id/guideline3"
-        android:src="@drawable/bg_good"
-        app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.4"
+        android:id="@+id/btn_refresh"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/icon_refresh"
+        app:layout_constraintTop_toBottomOf="@id/tv_check_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="5dp"
+        android:layout_marginTop="20dp"
         />
-
-<!--    h,1:1 means 너비를 제약에 맞춘 후 높이를 너비에 1대1비율에 맞춰서 설정함(여기서는 이미지가 가로에 맞춰 정사각형이됨)-->
 
 
 
